NetBSD Problem Report #39862

From www@NetBSD.org  Tue Nov  4 05:56:55 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 2FA2D63BD84
	for <gnats-bugs@gnats.netbsd.org>; Tue,  4 Nov 2008 05:56:55 +0000 (UTC)
Message-Id: <20081104055654.F029B63BD80@narn.NetBSD.org>
Date: Tue,  4 Nov 2008 05:56:54 +0000 (UTC)
From: bseklecki@collaborativefusion.com
Reply-To: bseklecki@collaborativefusion.com
To: gnats-bugs@NetBSD.org
Subject: rndctl(8)'s silently fails when multiple devices/types are given
X-Send-Pr-Version: www-1.0

>Number:         39862
>Category:       bin
>Synopsis:       rndctl(8)'s silently fails when multiple devices/types are given
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Nov 04 06:00:00 +0000 2008
>Closed-Date:    Sun Feb 15 07:15:42 +0000 2009
>Last-Modified:  Sun Feb 15 07:15:42 +0000 2009
>Originator:     Brian Seklecki
>Release:        NetBSD 4-stable
>Organization:
Collaborative Fusion, Inc.
>Environment:
NetBSD cauldron-nbsd-releng-4-i386 4.0_STABLE NetBSD 4.0_STABLE (GENERIC.MP) #0: Fri Oct 31 10:23:38 EDT 2008  root@cauldron-nbsd-releng-4-i386:/home/netbsd/obj.i386/999/sys/arch/i386/compile/GENERIC.MP i386

>Description:

Consider:

$ sudo rndctl -l|grep -i d0
sd0                 1068542 disk 
cd0                       0 disk 

Try to enable mutliple devices at the same time:
$ sudo rndctl -ce -d cd0 sd0

List afterwards:
$ sudo rndctl -l|grep -i d0
sd0                 1068542 disk 
cd0                       0 disk estimate, collect

Same thing with -t:
$ sudo rndctl -ce -t disk net

$ echo $?
0
$ sudo rndctl -l
Source                 Bits Type      Flags
sd0                 1068542 disk estimate, collect
cd0                       0 disk estimate, collect
pcn0                      0 net  
pms0                      0 tty  
pckbd0                    0 tty  



>How-To-Repeat:
Begin working on /etc/rc.d/rndctl; become frustrated by the silent failure
>Fix:
I'm checking the code in the AM.  Something with argv[] processing.

>Release-Note:

>Audit-Trail:
From: "Brian A. Seklecki" <bseklecki@collaborativefusion.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/39862: rndctl(8)'s silently fails when multiple
	devices/types are given
Date: Tue, 04 Nov 2008 16:07:15 -0500

 There is also an rc-script available at:

 http://code.google.com/p/cauldron/source/browse/trunk/framework/misc/rndctl

 Thanks, ~BAS




 IMPORTANT: This message contains confidential information and is intended only for the individual named. If the reader of this message is not an intended recipient (or the individual responsible for the delivery of this message to an intended recipient), please be advised that any re-use, dissemination, distribution or copying of this message is prohibited. Please notify the sender immediately by e-mail if you have received this e-mail by mistake and delete this e-mail from your system.


From: Alan Barrett <apb@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39862 CVS commit: src/sbin/rndctl
Date: Thu,  6 Nov 2008 16:01:54 +0000 (UTC)

 Module Name:	src
 Committed By:	apb
 Date:		Thu Nov  6 16:01:54 UTC 2008

 Modified Files:
 	src/sbin/rndctl: rndctl.c

 Log Message:
 * Instead of silently ignoring extra args, print a usage error.  This
   adddresses the silent failure reported in PR 39862 by Brian A. Seklecki
 * Adjust usage message to match the synopsis in the man page.


 To generate a diff of this commit:
 cvs rdiff -r1.17 -r1.18 src/sbin/rndctl/rndctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Brian A. Seklecki" <bseklecki@collaborativefusion.com>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/39862 CVS commit: src/sbin/rndctl
Date: Mon, 10 Nov 2008 17:00:51 -0500

 On Thu, 2008-11-06 at 16:05 +0000, Alan Barrett wrote:
 > The following reply was made to PR bin/39862; it has been noted by GNATS.
 > 

 Thanks again for jumping right on that.  

 I don't have a -current testing environment here; I'll set one up.  Once
 that I do; do I ask you for an RFP/MCF?

 ~BAS




 IMPORTANT: This message contains confidential information and is intended only for the individual named. If the reader of this message is not an intended recipient (or the individual responsible for the delivery of this message to an intended recipient), please be advised that any re-use, dissemination, distribution or copying of this message is prohibited. Please notify the sender immediately by e-mail if you have received this e-mail by mistake and delete this e-mail from your system.


From: Alan Barrett <apb@cequrux.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: PR/39862 CVS commit: src/sbin/rndctl
Date: Sun, 4 Jan 2009 16:11:13 +0200

 On Mon, 10 Nov 2008, Brian A. Seklecki wrote:
 > I don't have a -current testing environment here; I'll set one up.  Once
 > that I do; do I ask you for an RFP/MCF?

 If by "RFP/MFC" you meant "pullup to the netbsd-5 branch" then I have
 submitted a pullup request.

 --apb (Alan Barrett)

State-Changed-From-To: open->pending-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 04 Jan 2009 19:55:30 +0000
State-Changed-Why:
Problem is fixed in HEAD; awaiting pullup-5 #231.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39862 CVS commit: [netbsd-5] src/sbin/rndctl
Date: Thu,  8 Jan 2009 23:00:16 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Thu Jan  8 23:00:16 UTC 2009

 Modified Files:
 	src/sbin/rndctl [netbsd-5]: rndctl.c

 Log Message:
 Pull up following revision(s) (requested by apb in ticket #231):
 	sbin/rndctl/rndctl.c: revision 1.18
 * Instead of silently ignoring extra args, print a usage error.  This
   adddresses the silent failure reported in PR 39862 by Brian A. Seklecki
 * Adjust usage message to match the synopsis in the man page.


 To generate a diff of this commit:
 cvs rdiff -r1.17 -r1.17.28.1 src/sbin/rndctl/rndctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org,
	bseklecki@collaborativefusion.com
Subject: Re: PR/39862 CVS commit: src/sbin/rndctl
Date: Mon, 12 Jan 2009 09:09:58 +0000

 On Sun, Jan 04, 2009 at 02:15:04PM +0000, Alan Barrett wrote:
  >  On Mon, 10 Nov 2008, Brian A. Seklecki wrote:
  >  > I don't have a -current testing environment here; I'll set one up.  Once
  >  > that I do; do I ask you for an RFP/MCF?
  >  
  >  If by "RFP/MFC" you meant "pullup to the netbsd-5 branch" then I have
  >  submitted a pullup request.

 The original report was for netbsd-4; should this have a -4 pullup as well?

 -- 
 David A. Holland
 dholland@netbsd.org

From: "Brian A. Seklecki" <lavalamp@spiritual-machines.org>
To: David Holland <dholland-bugs@netbsd.org>
Cc: gnats-bugs@NetBSD.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/39862 CVS commit: src/sbin/rndctl
Date: Mon, 12 Jan 2009 12:42:01 -0500

 On Mon, 2009-01-12 at 09:09 +0000, David Holland wrote:
 > The original report was for netbsd-4; should this have a -4 pullup as
 > well?

 No objection here.  For sure no one has ever been so thorough with my
 PRs before. :)

 netbsd-4 has lots of life left in it!


 ~BAS




 IMPORTANT: This message contains confidential information and is intended only for the individual named. If the reader of this message is not an intended recipient (or the individual responsible for the delivery of this message to an intended recipient), please be advised that any re-use, dissemination, distribution or copying of this message is prohibited. Please notify the sender immediately by e-mail if you have received this e-mail by mistake and delete this e-mail from your system.


From: "Brian A. Seklecki" <lavalamp@spiritual-machines.org>
To: gnats-bugs@NetBSD.org, David Holland <dholland-bugs@netbsd.org>
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/39862 CVS commit: src/sbin/rndctl
Date: Thu, 05 Feb 2009 12:04:00 -0500

 On Mon, 2008-11-10 at 17:00 -0500, Brian A. Seklecki wrote:
 > On Thu, 2008-11-06 at 16:05 +0000, Alan Barrett wrote:

 Dave:

   IIRC, as a formality, I think the original commiter (Alan) has to
   request the netbsd-4 pullup?

   I volunteer to test in my lab. :)

 ~BAS




From: David Holland <dholland-bugs@netbsd.org>
To: "Brian A. Seklecki" <lavalamp@spiritual-machines.org>
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, gnats-bugs@netbsd.org,
	bseklecki@collaborativefusion.com
Subject: Re: PR/39862 CVS commit: src/sbin/rndctl
Date: Sun, 8 Feb 2009 06:15:02 +0000

 On Fri, Feb 06, 2009 at 05:45:02PM +0000, Brian A. Seklecki wrote:
  >  Dave:
  >  
  >    IIRC, as a formality, I think the original commiter (Alan) has to
  >    request the netbsd-4 pullup?

 Nah, not particularly, it's more that I've been too busy to look at
 -bugs for the past month or so.

 pullup-4 #1274 is now pending.

 -- 
 David A. Holland
 dholland@netbsd.org

From: Jaime Fournier <ober@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39862 CVS commit: [netbsd-4] src/sbin/rndctl
Date: Wed, 11 Feb 2009 04:35:41 +0000 (UTC)

 Module Name:	src
 Committed By:	ober
 Date:		Wed Feb 11 04:35:41 UTC 2009

 Modified Files:
 	src/sbin/rndctl [netbsd-4]: rndctl.c

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #1274):
 	sbin/rndctl/rndctl.c: revision 1.18
 * Instead of silently ignoring extra args, print a usage error.  This
   adddresses the silent failure reported in PR 39862 by Brian A. Seklecki
 * Adjust usage message to match the synopsis in the man page.


 To generate a diff of this commit:
 cvs rdiff -r1.17 -r1.17.4.1 src/sbin/rndctl/rndctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Brian A. Seklecki" <bseklecki@collaborativefusion.com>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/39862 CVS commit: [netbsd-4] src/sbin/rndctl
Date: Wed, 11 Feb 2009 16:19:29 -0500

 --=-SQCbbYlr4l7w9de0e/cf
 Content-Type: text/plain
 Content-Transfer-Encoding: quoted-printable

 > =20
 >  Log Message:
 >  Pull up following revision(s) (requested by dholland in ticket #1274):
 >  	sbin/rndctl/rndctl.c: revision 1.18

 Pullup looks great.  I *heart* you guys. =20

 # rndctl -CE -t disk net tty
 Then:

 # rndctl -ls
 Source                 Bits Type      Flags
 sd0                     192 disk=20
 cd0                       0 disk=20
 pcn0                      0 net  collect
 pms0                      0 tty  estimate, collect
 pckbd0                    0 tty  estimate, collect
               202 bits mixed into pool
                 0 bits currently stored in pool (max 4096)
                 0 bits of entropy discarded due to full pool
               202 hard-random bits generated
            123158 pseudo-random bits generated

 Now:

 # ./obj/rndctl -CE -t disk net tty
 usage: rndctl -CEce [-d devname | -t devtype]
        rndctl -ls [-d devname | -t devtype]

 # file obj/rndctl
 obj/rndctl: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV),
 for NetBSD 4.0, dynamically linked (uses shared libs), not stripped

 l# ident !$
 ident obj/rndctl
 obj/rndctl:
      $NetBSD: crt0.c,v 1.16 2006/05/17 17:08:54 christos Exp $
      $NetBSD: rndctl.c,v 1.17.4.1 2009/02/11 04:35:41 ober Exp $

 I'll but you in a few weeks about pulling up /etc/rc.d/rndctl into
 releng-5 and releng-4 =20

 Until then.=20
   L8r ~BAS


 --=-SQCbbYlr4l7w9de0e/cf
 Content-Type: application/pgp-signature; name="signature.asc"
 Content-Description: This is a digitally signed message part

 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (GNU/Linux)

 iEYEABECAAYFAkmTQOEACgkQCne6BNDQ+R87sQCfarf2QE75c1DcOSMJaw+n6iJj
 W0cAn256bSFj4r21qkV5uNKdxTAWOrcY
 =Bl2a
 -----END PGP SIGNATURE-----

 --=-SQCbbYlr4l7w9de0e/cf--

From: Alan Barrett <apb@cequrux.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: PR/39862 CVS commit: [netbsd-4] src/sbin/rndctl
Date: Thu, 12 Feb 2009 09:04:11 +0200

 On Wed, 11 Feb 2009, Brian A. Seklecki wrote:
 >  I'll but you in a few weeks about pulling up /etc/rc.d/rndctl into
 >  releng-5 and releng-4

 /etc/rc.d.rndctl is already in netbsd-5.  I don't think it should be
 pulled up to netbsd-4.

 --apb (Alan Barrett)

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 15 Feb 2009 07:15:42 +0000
State-Changed-Why:
Pullups done.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.