Pull up following revision(s) (requested by apb in ticket #231): 	sbin/rndctl/rndctl.c: revision 1.18 * Instead of silently ignoring extra args, print a usage error.  This   adddresses the silent failure reported in PR 39862 by Brian A. Seklecki * Adjust usage message to match the synopsis in the man page.