sbin/rndctl/rndctl.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: rndctl.c,v 1.17 2005/06/27 01:00:06 christos Exp $	*/
+/*	$NetBSD: rndctl.c,v 1.17.28.1 2009/01/08 23:00:16 snj Exp $	*/
 
 /*-
  * Copyright (c) 1997 Michael Graff.
@@ -31,7 +31,7 @@
 #include <sys/cdefs.h>
 
 #ifndef lint
-__RCSID("$NetBSD: rndctl.c,v 1.17 2005/06/27 01:00:06 christos Exp $");
+__RCSID("$NetBSD: rndctl.c,v 1.17.28.1 2009/01/08 23:00:16 snj Exp $");
 #endif
 
 
@@ -74,9 +74,9 @@ static void
 usage(void)
 {
 
-	fprintf(stderr, "usage: %s -CEce [-t devtype] [-d devname]\n",
+	fprintf(stderr, "usage: %s -CEce [-d devname | -t devtype]\n",
 	    getprogname());
-	fprintf(stderr, "       %s -ls [-t devtype] [-d devname]\n",
+	fprintf(stderr, "       %s -ls [-d devname | -t devtype]\n",
 	    getprogname());
 	exit(1);
 }
@@ -256,7 +256,7 @@ main(int argc, char **argv)
 	sflag = 0;
 	type = 0xff;
 
-	while ((ch = getopt(argc, argv, "CEcelt:d:s")) != -1)
+	while ((ch = getopt(argc, argv, "CEcelt:d:s")) != -1) {
 		switch (ch) {
 		case 'C':
 			rctl.flags |= RND_FLAG_NO_COLLECT;
@@ -303,6 +303,15 @@ main(int argc, char **argv)
 		default:
 			usage();
 		}
+	}
+	argc -= optind;
+	argv += optind;
+
+	/*
+	 * No leftover non-option arguments.
+	 */
+	if (argc > 0)
+		usage();
 
 	/*
 	 * Cannot list and modify at the same time.
